--- a/config_files/auditor_trainer_area_mapping.json
+++ b/config_files/auditor_trainer_area_mapping.json
@@ -2,17 +2,6 @@
   "model_master": {
     "description": "Model Master - 전체 공장 담당",
     "employees": {
-      "620080295": {
-        "name": "VÕ THỊ THÙY LINH",
-        "position_code": "QA2A",
-        "description": "Model Master - 전체 구역",
-        "conditions": [
-          {
-            "type": "ALL",
-            "filters": []
-          }
-        ]
-      },
       "618030241": {
         "name": "TRẦN THỊ THÚY ANH",
         "position": "MODEL MASTER",
@@ -130,6 +119,16 @@
             {"column": "REPACKING PO", "value": "NORMAL PO"},
             {"column": "BUILDING", "value": "C"}
           ]
+        }
+      ]
+    },
+    "620080295": {
+      "name": "VÕ THỊ THÙY LINH",
+      "description": "All Buildings - Team Leader",
+      "conditions": [
+        {
+          "type": "ALL",
+          "filters": []
         }
       ]
     }
