--- a/config_files/config_august_2025.json
+++ b/config_files/config_august_2025.json
@@ -1,7 +1,7 @@
 {
   "year": 2025,
   "month": "august",
-  "working_days": 27,
+  "working_days": 26,
   "previous_months": [
     "july",
     "june"
@@ -13,5 +13,7 @@
     "5prs": "input_files/5prs data august.csv",
     "attendance": "input_files/attendance/converted/attendance data august_converted.csv"
   },
-  "output_prefix": "output_QIP_incentive_august_2025"
+  "output_prefix": "output_QIP_incentive_august_2025",
+  "working_days_source": "attendance_data",
+  "working_days_updated_at": "2025-09-16T13:35:34.499037"
 }
