--- a/config_files/config_september_2025.json
+++ b/config_files/config_september_2025.json
@@ -9,7 +9,7 @@
   "file_paths": {
     "basic": "input_files/basic manpower data september.csv",
     "previous_incentive": "input_files/2025년 8월 인센티브 지급 세부 정보.csv",
-    "aql": "input_files/AQL history/HSRG AQL REPORT-SEPTEMBER.2025.csv",
+    "aql": "input_files/AQL history/1.HSRG AQL REPORT-SEPTEMBER.2025.csv",
     "5prs": "input_files/5prs data september.csv",
     "attendance": "input_files/attendance/converted/attendance data september_converted.csv"
   },
