incentive dashboard_version 12_100304_run_full_validation.sh 추가

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ config_files/*_backup_*.json
 
 # 검증 파일들
 error_review/hr_data_validation_*.xlsx
+validation_reports/*.xlsx
 
 # Python 캐시
 __pycache__/
