--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -1,11 +1,7 @@
-flask==2.3.0
-flask-cors==4.0.0
-gspread==5.12.0
-oauth2client==4.1.3
-google-auth==2.23.0
-google-auth-oauthlib==1.1.0
-google-auth-httplib2==0.1.1
-pandas==2.0.0
-numpy==1.24.0
-openpyxl==3.1.0
-python-dotenv==1.0.0
+streamlit>=1.28.0
+pandas>=2.0.0
+numpy>=1.26.0
+plotly>=5.17.0
+openpyxl>=3.0.10
+python-dateutil>=2.8.2
+python-dotenv>=1.0.0
