fix: add automatic working_days update from attendance data
- Added update_config_working_days.py execution in GitHub Actions workflow
- Automatically calculates actual working days from attendance data
- Fixes inconsistency between calendar (13 days) and config (11 days)
- Updates both current month and previous month configs
- Working days now dynamically updated based on latest attendance data

--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -75,6 +75,20 @@ jobs:
         echo "Auto-generating config files for new months..."
         python scripts/auto_generate_configs.py
 
+    # 7-1. Working Days 자동 업데이트 (CRITICAL!)
+    - name: 📊 Update Working Days from Attendance Data
+      run: |
+        echo "Updating working days from actual attendance data..."
+        # 현재 년월 가져오기
+        CURRENT_MONTH=$(date +%B | tr '[:upper:]' '[:lower:]')
+        CURRENT_YEAR=$(date +%Y)
+        echo "Updating config for $CURRENT_MONTH $CURRENT_YEAR..."
+        python scripts/utils/update_config_working_days.py --month $CURRENT_MONTH --year $CURRENT_YEAR || true
+        # 이전 달도 업데이트 (필요시)
+        PREV_MONTH=$(date -d "1 month ago" +%B 2>/dev/null | tr '[:upper:]' '[:lower:]' || date -v-1m +%B | tr '[:upper:]' '[:lower:]')
+        echo "Updating config for $PREV_MONTH $CURRENT_YEAR..."
+        python scripts/utils/update_config_working_days.py --month $PREV_MONTH --year $CURRENT_YEAR || true
+
     # 8. 인센티브 자동 계산
     - name: 💰 Calculate Incentives
       run: |
