feat: Add real-time data freshness indicator and 30-min auto-update
✨ New Features:
- Data Freshness Badge: Shows last update time and next auto-update
- Color-coded status: 🟢 Fresh (0-20min) / 🟡 Moderate (20-40min) / 🔴 Stale (40min+)
- Multi-language support: Korean, English, Vietnamese
- Real-time calculation from config last_updated timestamp

⚡ Performance Improvements:
- GitHub Actions: 60min → 30min update cycle (50% faster)
- Maximum data staleness reduced from 60 to 30 minutes

🔧 Technical Changes:
- Added updateDataFreshness() function with language support
- Enhanced generate_dashboard_html() with config_last_updated parameter
- Modified .github/workflows/auto-update-enhanced.yml cron schedule

📊 User Impact:
- Workers see data freshness immediately upon dashboard access
- Prevents trust issues from stale data (e.g., 100,000 VND updated in Google Drive but showing 10,000 VND)
- Clear expectation of next automatic update timing

🎯 Problem Solved:
User concern: "작업자가 대시보드를 열었을 때 오래된 데이터를 보고 불신하는 상황 방지"
Solution: Transparent data freshness + Faster auto-updates (30min cycle)

--- a/.github/workflows/auto-update-enhanced.yml
+++ b/.github/workflows/auto-update-enhanced.yml
@@ -2,8 +2,8 @@ name: 🔄 Enhanced Auto Update Dashboard with Config Sync
 
 on:
   schedule:
-    # 매시간 실행 (한국 시간 기준 조정 필요)
-    - cron: '0 * * * *'
+    # 30분마다 실행 (데이터 신선도 개선)
+    - cron: '*/30 * * * *'
 
   # 수동 실행 가능
   workflow_dispatch:
